objects/LAT_CTY_B2B_Payment__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pagos B2B</relationshipLabel>
        <relationshipName>Pagos_B2B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Amount__c</fullName>
        <label>Importe</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_Comments__c</fullName>
        <label>Comentarios</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Date__c</fullName>
        <label>Fecha</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_Status__c</fullName>
        <label>Estado</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pago Informado</fullName>
                </value>
                <value>
                    <fullName>Pago Confirmado</fullName>
                </value>
                <value>
                    <fullName>Pago Rechazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pago B2B</label>
    <listViews>
        <fullName>todos</fullName>
        <columns>NAME</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_Status__c</columns>
        <columns>LAT_Date__c</columns>
        <columns>LAT_Amount__c</columns>
        <columns>LAT_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>todos</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PAGO-{00000}</displayFormat>
        <label>Pagos B2B Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos B2B</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>